# bon

./: .gitignore  draw_sudoku.py  flake.nix  main.py  print_sudoku.py  printer.py  pyproject.toml  render.py  requirements.txt  util.py
print/: daily_report.py  furby.py  image.py  list.py  qr.py  sudoku.py  text.py
