[tool.poetry]
name = "bon"
version = "0.1.0"
description = ""
authors = ["Kilian Koeltzsch <me@kilian.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
escpos = "^2.0.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
