[project]
name = "bon"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kilian Koeltzsch", email = "me@kilian.io" }
]
dependencies = [
    "python-escpos>=3.1",
    "pillow>=10.0.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "py-sudoku>=2.0.0",
    "matplotlib>=3.10.0",
]
